<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context="com.example.medicare.RoutineActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:id="@+id/app_name"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="35sp"/>

        <ImageView
            android:id="@+id/calender"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/calender" />

        <ImageView
            android:id="@+id/str"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/streak" />

    </LinearLayout>

    <TextView
        android:id="@+id/selected_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/date"
        android:textSize="18sp"
        android:layout_below="@id/top"
        android:textColor="@color/black"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/streak_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/streak"
        android:textSize="35sp"
        android:layout_below="@id/top"
        android:textColor="@color/black"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="29sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/top"/>

    <EditText
        android:id="@+id/medication_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@id/name"
        android:backgroundTint="@color/black"/>

    <EditText
        android:id="@+id/medication_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@id/medication_name"
        android:backgroundTint="@color/black"/>

    <EditText
        android:id="@+id/medication_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/NumberOfTimesADay"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@id/medication_amount"
        android:backgroundTint="@color/black"/>

    <EditText
        android:id="@+id/startTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/startTime"
        android:inputType="time"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_below="@id/medication_frequency"
        android:backgroundTint="@color/black"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_below="@id/startTime"
        android:backgroundTint="@color/SkyBlue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/meds" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/routine"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/discover" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/discover"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>